# phigros_bot

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: phigros_json.yml
phigros_bot/: main.py
